--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -9,8 +9,23 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'myPhotos' %}">Gallery</a>
+      <a class="navbar-brand" href="{% url 'myPhoto' %}">Gallery</a>
     </div>
+
+   <!-- Search Form -->
+   <div class="col-sm-4 col-md-4 navbar-right">
+    <form action="{% url 'search_results' %}" class="navbar-form" role="search">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Photo" name="search">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                    <i class="glyphicon glyphicon-search"></i>
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+
   </div>
 </nav>
 </body>
