change html title

--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -10,7 +10,7 @@
     {%if title %}
     <title>Gallery - {{title}}</title>
     {% else %}
-       <title>Document</title>
+       <title>MY GALLERY</title>
     {% endif %}
 
     {% block styles %}
